--- a/app/NeurologyApplication/NeurologyApplication/.classpath
+++ b/app/NeurologyApplication/NeurologyApplication/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/JTattoo-1.6.11.jar"/>
 	<classpathentry kind="lib" path="lib/jxdatepicker-support-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jasmina/Documents/GitHub/inzenjeringZnanjaProjekat/app/NeurologyApplication/NeurologyApplication/jiprolog-4.1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
