--- a/app/NeurologyApplication/NeurologyApplication/.classpath
+++ b/app/NeurologyApplication/NeurologyApplication/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="lib/jxdatepicker-support-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Jasmina/Documents/GitHub/inzenjeringZnanjaProjekat/app/NeurologyApplication/NeurologyApplication/jiprolog-4.1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/jiprolog-4.1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/jFuzzyLogic.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
