--- a/app/NeurologyApplication/NeurologyApplication/.classpath
+++ b/app/NeurologyApplication/NeurologyApplication/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/jpf-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/unbbayes-4.22.18.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-looks-2.7.0.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-common-1.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
