--- a/app/NeurologyApplication/NeurologyApplication/.classpath
+++ b/app/NeurologyApplication/NeurologyApplication/.classpath
@@ -44,5 +44,7 @@
 	<classpathentry kind="lib" path="jenaLib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="jenaLib/slf4j-api-1.7.26.jar"/>
 	<classpathentry kind="lib" path="jenaLib/slf4j-log4j12-1.7.26.jar"/>
+	<classpathentry kind="lib" path="lib/jCOLIBRI-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
